using System;
using System.ComponentModel.DataAnnotations;
using System.ComponentModel.DataAnnotations.Schema;

namespace UoWRepo.Core.EFDomain;

[Table("ArtistPreviewImage")]
public class ArtistPreviewImage: TEntityGuid // No inheritance needed as it has a specific Guid PK and no standard audit dates
{
    [Key] // Primary Key
    [DatabaseGenerated(DatabaseGeneratedOption.None)] // Guid is likely generated by default constraint, not identity
    [Column("ArtistPreviewImageID")]
    public Guid ArtistPreviewImageID { get; set; }

    [Required]
    [Column("ArtistID")]
    [ForeignKey("Artist")] // Links to the Artist navigation property
    public Guid ArtistID { get; set; }

    [Required]
    [Column("PreviewImageID")]
    [ForeignKey("PreviewImage")] // Links to the PreviewImage navigation property
    public int PreviewImageID { get; set; }

    // --- Navigation Properties ---
    // Define these based on your actual entity class names

    public virtual Artists? Artist { get; set; } // Assuming an 'Artists' entity exists

    public virtual GenericPreviewImages? PreviewImage { get; set; } // Assuming a 'GenericPreviewImages' entity exists
}